--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/tilelive-omnivore",
-  "version": "3.3.0-sg",
+  "version": "3.4.0-smartgeomatic.1",
   "description": "Implements the tilelive API for a variety of raw data formats",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git://github.com/rpieciorak/tilelive-omnivore.git"
   },
+  "publishConfig": {
+    "registry": "https://smartgeomatic.org/npm/"
+  },
   "author": "Mapbox",
   "license": "ISC",
   "bugs": {
@@ -19,8 +22,8 @@
   },
   "homepage": "https://github.com/rpieciorak/tilelive-omnivore",
   "dependencies": {
-    "@mapbox/mapnik-omnivore": "git+https://github.com/rpieciorak/mapnik-omnivore.git",
-    "@mapbox/tilelive-bridge": "git+https://github.com/rpieciorak/tilelive-bridge.git",
+    "@mapbox/mapnik-omnivore": "8.4.1-smartgeomatic.1",
+    "@mapbox/tilelive-bridge": "2.5.1-smartgeomatic.1",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
